@@ -26,6 +26,7 @@
 
 #include "QualifiedName.h"
 #include <wtf/Forward.h>
+#include <wtf/OwnPtr.h>
 #include <wtf/RefPtr.h>
 #include "HTMLParserErrorCodes.h"
 
@@ -184,7 +185,7 @@ private:
     bool m_handlingResidualStyleAcrossBlocks;
     int m_inStrayTableContent;
 
-    HTMLParserQuirks* m_parserQuirks;
+    OwnPtr<HTMLParserQuirks> m_parserQuirks;
 };
 
 }
